[package]
name = "ezip2dmg"
version = "0.1.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
argh = "0.1.4"
dialoguer = "0.8.0"
which = "4.1.0"
uuid = { version = "0.8.2", features = ["v4"] }
