[package]
name = "edmgutil"
version = "0.1.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
dialoguer = { version = "0.11.0", default-features = false, features = ["password"] }
which = "6.0.0"
uuid = { version = "1.7.0", features = ["v4"] }
plist = "1.6.0"
serde = { version = "1.0.126", features = ["derive"] }
structopt = { version = "0.3.21", default-features = false }
clap = { version = "2.33.3", default-features = false }
chrono = { version = "0.4.19", default-features = false, features = ["std"] }
xattr = "1.3.1"
directories = "5.0.1"
url = { version = "2.2.2", features = ["serde"] }
